GPC/tests/examples/fail/notInscope.gpc

int notInscope() {
    int y = x + 2; //x not defined
}
